--- a/mybatis/src/main/resources/application.properties
+++ b/mybatis/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:spring
 
+mybatis.type-aliases-package=com.example.mybatis.mybatis.domain
+mybatis.mapper-locations=mybatis-mapper/*.xml
