--- a/mybatis/src/main/resources/application.properties
+++ b/mybatis/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:spring
 
+spring.type-aliases-package=com.crud.crudtest.domain
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+#none: not create / create: auto create / update: only update
+
 mybatis.type-aliases-package=com.example.mybatis.mybatis.domain
 mybatis.mapper-locations=mybatis-mapper/*.xml
+
