prac : MyBatis CRUD 실습 (미완성)

--- a/kdt9/src/main/resources/application.properties
+++ b/kdt9/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-# spring boot ??????? ?? ??? ???? ??
-# ?-? ??? ?????.
+# spring boot 애플리케이션의 구성 속성을 설정하는 파일
+# 키-값값 쌍으로 이루어진다.
 
 # application.properties VS application.yml
-# application.properties? ????? ? ??
-# application.yml? ??? ?? ? ???? ??. (????? ????.)
-# ??? ??? ??? ?. ???? ?? ? ? ? ??? ???? ??? ??
-# ????? ?? ??? ?????? ?? ??
+# application.properties가 우선순위가 더 높음
+# application.yml가 구조를 조금 더 파악하기 좋다. (중복코드가 줄어든다.)
+# 차이는 사실상 없다고 봄. 프로젝트 진행 시 둘 중 선택해서 하는게 좋음
+# 우선순위에 따라 내용이 덮어씌워질수 있기 때문
 
 #[application.properties]
 #spring.test.abc=1
@@ -16,7 +16,7 @@
 #        abc:1
 #        dce:2
 
-# ????? cj ??
+# 최신버전은 cj 작성
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/kdt9?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
 spring.datasource.username=simson
@@ -24,4 +24,4 @@ spring.datasource.password=simson
 
 mybatis.type-aliases-package=com.spring.boot.mapper
 mybatis.mapper-locations=mybatis-mapper/*.xml
-# resources/ ?? ??
+# resources/ 아래 위치
