study : Hibernate CURD (게시판 제작)

--- a/kdt9/src/main/resources/application.properties
+++ b/kdt9/src/main/resources/application.properties
@@ -25,3 +25,14 @@ spring.datasource.password=simson
 mybatis.type-aliases-package=com.spring.boot.mapper
 mybatis.mapper-locations=mybatis-mapper/*.xml
 # resources/ 아래 위치
+
+# [JPA]
+# DB의 고유 기능
+# SQL문을 확인하겠다.
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+# create : 기존 테이블을 삭제하고 생성하겠다. (drop + create)
+# create-drop : 기존 테이블을 삭제하고 생성, 애플리케이션이 종료될 때 삭제 (drop + create + drop)
+# update : DB 테이블이랑 Entity 정보를 비교해서 변경사항만 수정 (만약 테이블이 없다면 생성)
+# validate : DB 테이블과 Entity 정보를 비교해서 차이가 있으면 error (애플리케이션 실행 X)
+# none : 자동생성기능을 사용하지 않겠다.
