--- a/kdt9/build.gradle
+++ b/kdt9/build.gradle
@@ -28,8 +28,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	// JDBC (MyBatis)
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// JPA (Hibernate)
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
